fix truncate card names

--- a/src/css/scss/_custom.scss
+++ b/src/css/scss/_custom.scss
@@ -272,3 +272,12 @@
     color: #000;
   }
 }
+.VI-text-truncate{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 100%;
+    a{
+      display: contents !important;
+    }
+}
